<resources>
    <string name="app_name">HealthRecord</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="health_detail_fragment_label">Health Detail Fragment</string>
    <string name="health_list_fragment_label">Health List Fragment</string>

    <string name="fab_content_text">Add new health record</string>
    <string name="health_detail_button">Go to list</string>
    <string name="detail_fragment">Detail fragment</string>
    <string name="blood_pressure_label">BP</string>
    <string name="blood_sugar_label">BS</string>
    <string name="blood_pressure_seperator">/</string>
    <string name="weight_label">WT</string>
    <string name="heart_rate_label">HR</string>
    <string name="date_label">DATE</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="add_blood_pressure_label">Blood Pressure:</string>
    <string name="diastolic_hint">Diastolic</string>
    <string name="add_blood_sugar_label">Blood Sugar:</string>
    <string name="add_weight_label">Weight:</string>
    <string name="add_heart_rate_label">Heart Rate:</string>
    <string name="submit">Submit</string>
</resources>