<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/app_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:elevation="@dimen/app_bar_elevation"
        android:theme="@style/AppTheme.AppBarOverlay">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            android:elevation="@dimen/toolbar_elevation"
            android:theme="@style/AppTheme.AppBarOverlay"
            app:popupTheme="@style/AppTheme.PopupOverlay" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/list_margin"
                android:layout_marginBottom="@dimen/list_margin"
                android:layout_marginStart="@dimen/list_end_margin"
                android:textAppearance="@android:style/TextAppearance.DeviceDefault.Medium"
                android:text="@string/blood_pressure_label" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingStart="@dimen/list_blood_sugar_label_padding"
                android:paddingEnd="@dimen/list_padding"
                android:layout_marginTop="@dimen/list_margin"
                android:layout_marginBottom="@dimen/list_margin"
                android:layout_marginStart="@dimen/list_end_margin"
                android:textAppearance="@android:style/TextAppearance.DeviceDefault.Medium"
                android:text="@string/blood_sugar_label" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingStart="@dimen/list_heart_rate_label_padding"
                android:paddingEnd="@dimen/list_padding"
                android:layout_marginTop="@dimen/list_margin"
                android:layout_marginBottom="@dimen/list_margin"
                android:layout_marginStart="@dimen/list_end_margin"
                android:textAppearance="@android:style/TextAppearance.DeviceDefault.Medium"
                android:text="@string/heart_rate_label" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingStart="@dimen/list_weight_label_padding"
                android:paddingEnd="@dimen/list_padding"
                android:layout_marginTop="@dimen/list_margin"
                android:layout_marginBottom="@dimen/list_margin"
                android:layout_marginStart="@dimen/list_end_margin"
                android:textAppearance="@android:style/TextAppearance.DeviceDefault.Medium"
                android:text="@string/weight_label" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/list_margin"
                android:layout_marginBottom="@dimen/list_margin"
                android:layout_marginStart="@dimen/list_end_margin"
                android:textAppearance="@android:style/TextAppearance.DeviceDefault.Medium"
                android:text="@string/date_label" />


        </androidx.appcompat.widget.Toolbar>

    </com.google.android.material.appbar.AppBarLayout>

    <androidx.core.widget.NestedScrollView
        android:id="@+id/recipe_nested"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior">


    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/list"
        android:name="mobi.thalic.healthrecord.HealthEntryFragment"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginLeft="@dimen/text_margin"
        android:layout_marginRight="@dimen/text_margin"
        app:layoutManager="LinearLayoutManager"
        tools:context=".HealthListFragment"
        tools:listitem="@layout/health_list_fragment_item" />

    </androidx.core.widget.NestedScrollView>

</androidx.coordinatorlayout.widget.CoordinatorLayout>